crates/daml-syntax/tests/compile_fail/coordinate_source_len_not_text_size.rs
use daml_syntax::{LineIndex, TextSize};

fn main() {
    let index = LineIndex::new("abc");
    let _: TextSize = index.source_len_bytes();
}
